fix: animations in header & sidebar add ReactQueryProvider

--- a/frontend/rsbuild-template/index.html
+++ b/frontend/rsbuild-template/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html
   lang="ru"
-  dir="ltr"
   data-sidebar-size="lg"
   data-layout="vertical"
   data-topbar="light"
@@ -14,9 +13,7 @@
 >
   <head></head>
 
-  <body
-    class="text-base bg-body-bg text-body font-public group-data-[skin=bordered]:bg-body-bordered"
-  >
+  <body class="text-base bg-body-bg text-body font-public">
     <div id="<%= mountId %>"></div>
   </body>
 </html>
